--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,8 @@
 // }
 
 // variables.less
-$theme-primary: #F05F40;
+// $theme-primary: #F05F40;
+$theme-primary: #03a2ac;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
@@ -42,3 +43,26 @@ $theme-dark: #222;
         "mixins",
         "base"
 ;
+
+form#mc-embedded-subscribe-form {
+
+  label {
+    display: none;
+  }
+
+  input[type=email] {
+    width: 80%;
+    padding: 8px 4px;
+    color: $theme-primary;
+    font-size: 20px;
+    border: none;
+    border-radius: 2px;
+    text-align: center;
+  }
+
+  input[type=submit] {
+    margin-top: 10px;
+    background-color: $theme-primary;
+    color: white;
+  }
+}
