--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">A Few of Our Specialties</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -11,30 +11,30 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <i class="fa fa-4x fa-anchor wow bounceIn text-primary"></i>
+                    <h3>Rigging Solutions</h3>
+                    <p class="text-muted">We offer custom running rigging solutions, specializing in lightweight, ultra strong Dyneema.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <i class="fa fa-4x fa-compass wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Yacht Delivery</h3>
+                    <p class="text-muted">Our USCG 100GRT Master Mariners can safely deliver your boat to any destination.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <i class="fa fa-4x fa-bolt wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Electrical</h3>
+                    <p class="text-muted">From troubleshooting and diagnosis to new installation of all electronic equipment and electrical systems.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <i class="fa fa-4x fa-wrench wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Mechanical</h3>
+                    <p class="text-muted">We will keep your engines, pumps, generators and more running in top condition.</p>
                 </div>
             </div>
         </div>
