use the scroll class on the contact button

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -7,7 +7,7 @@
                 <p class="text-faded">
                   We take pride in being Prudent and Professional Mariners and that's why we started this company. A Prudent Mariner knows the ins and outs of every system on their vessel and it is our mission to keep every system on our customer's vessels in top notch condition. We cater to both power and sailing vessels, and offer services ranging from exterior maintenance and repair, fiberglass, bright work, paint, blister repair, electrical systems, batteries, solar, engine, fuel, mechanical, hydraulics, anchoring systems, canvas, sails, upholstery and more. It takes a lot to keep the dream alive, and we're here to make sure you're underway safely and reliably. Contact us today to discuss the needs of your vessel.
                 </p>
-                <a href="#contact" class="btn btn-default btn-xl">Contact Us</a>
+                <a href="#contact" class="page-scroll btn btn-default btn-xl">Contact Us</a>
             </div>
         </div>
     </div>
