--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -18,13 +18,13 @@
                 <p>{{ site.email }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-2 text-center">
+        <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="https://twitter.com/{{ site.twitter_username }}">
                 <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.twitter_username }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
+        <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://instagram.com/{{ site.instagram_username }}">
             <i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.instagram_username }}</p>
@@ -34,6 +34,12 @@
             <a href="https://facebook.com/{{ site.facebook_username }}">
             <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.facebook_username }}</p>
+            </a>
+        </div>
+        <div class="col-lg-2 col-lg-offset-1 text-center">
+            <a href="https://youtube.com/{{ site.youtube_username }}">
+            <i class="fa fa-youtube fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{ site.youtube_username }}</p>
             </a>
         </div>
 
