--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="https://youtube.com/{{ site.youtube_username }}">
+            <a href="https://youtube.com/prudentmariners">
             <i class="fa fa-youtube fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.youtube_username }}</p>
             </a>
