Fix the yt URL again

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -37,9 +37,9 @@
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="https://youtube.com/prudentmariners">
+            <a href="https://youtube.com/{{ site.youtube_username }}">
             <i class="fa fa-youtube fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.youtube_username }}</p>
+                <p>prudentmariners</p>
             </a>
         </div>
 
