--- a/_sass/_includes/_portfolio.scss
+++ b/_sass/_includes/_portfolio.scss
@@ -42,11 +42,12 @@
 	}
 }
 
+
 .portfolio-item__link {
 	position: relative;
 	display: block;
 
-	@include mq(tabletl) {
+	@include mq(desktop) {
 
 		&:hover {
 
@@ -79,9 +80,15 @@
 	justify-content: center;
 	background: rgba($overlay-background-color, $overlay-opacity);
 
-	opacity: 0;
-	visibility: hidden;
-	@include transition(all 0.2s ease-in-out);
+}
+
+@include mq(desktop) {
+
+	.portfolio-item__content {
+		opacity: 0;
+		visibility: hidden;
+		@include transition(all 0.2s ease-in-out);
+	}
 }
 
 .portfolio-item__info {
