--- a/css/style.scss
+++ b/css/style.scss
@@ -154,4 +154,6 @@ $grid-spacing: {{ site.data.settings.grid_settings.grid_spacing }}px;
 @import "_includes/_portfolio";
 @import "_includes/_blog";
 
+// - - - - - - - - - - Custom styles
 
+@import "_custom";
