Rebrand the static site so we can kill the shopify store

--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,19 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We are experienced yacht service professionals.</h2>
+                <h2 class="section-heading">Experienced Yacht Service Professionals</h2>
                 <hr class="light">
                 <p class="text-faded">
-                  We take pride in being Prudent and Professional Mariners and that's why we started this company. A Prudent Mariner knows the ins and outs of every system on their vessel and it is our mission to keep every system on our customer's vessels in top notch condition. We cater to both power and sailing vessels, and offer services ranging from exterior maintenance and repair, fiberglass, bright work, paint, blister repair, electrical systems, batteries, solar, engine, fuel, mechanical, hydraulics, anchoring systems, canvas, sails, upholstery and more. It takes a lot to keep the dream alive, and we're here to make sure you're underway safely and reliably. Contact us today to discuss the needs of your vessel.
+                  Prudent Mariners was founded in 2018 as a general mobile marine services company by Claude Nix with the goal of providing prompt and reliable service and support to the transient and cruising boaters transiting the Mile Zero area of the Atlantic Intracoastal Waterway. Since this time, the company has served thousands of customers and earned a reputation for quality, reliability and excellent support.
+                </p>
+
+                <p class="text-faded">
+                  In 2020, Claude earned an ABYC Electrical Technician certification and specialized the business in electrical systems design.
+                </p>
+
+                <p class="text-faded">
+                  Today, Prudent Mariners continues to build on this foundation as the premiere Victron Energy Systems distributor and installer in the state of Virginia.
+                  <!-- We take pride in being Prudent and Professional Mariners and that's why we started this company. A Prudent Mariner knows the ins and outs of every system on their vessel and it is our mission to keep every system on our customer's vessels in top notch condition. We cater to both power and sailing vessels, and offer services ranging from exterior maintenance and repair, fiberglass, bright work, paint, blister repair, electrical systems, batteries, solar, engine, fuel, mechanical, hydraulics, anchoring systems, canvas, sails, upholstery and more. It takes a lot to keep the dream alive, and we're here to make sure you're underway safely and reliably. Contact us today to discuss the needs of your vessel. -->
                 </p>
                 <a href="#contact" class="page-scroll btn btn-default btn-xl">Contact Us</a>
             </div>
