--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>We are Prudent Mariners</h1>
             <hr>
-            <p>A general yacht services company operating on the East Coast of the USA, based on the Chesapeake Bay.</p>
+            <p>Expert Marine Electrical Services at Mile Marker Zero of the Atlantic Intracoastal Waterway in The Historic Seaport of Portsmouth, VA</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
