--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Prudent Mariners</a>
+            <a class="navbar-brand page-scroll" href="#page-top"><img height="35px" style="display:inline;margin:-7px 10px 0 0;" src="/images/SVG/logo.png" />Prudent Mariners</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
