--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,30 +11,30 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-anchor wow bounceIn text-primary"></i>
-                    <h3>Rigging Solutions</h3>
-                    <p class="text-muted">We offer custom running rigging solutions, specializing in lightweight, ultra strong Dyneema.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-compass wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Yacht Delivery</h3>
-                    <p class="text-muted">Our USCG 100GRT Master Mariners can safely deliver your boat to any destination.</p>
+                    <i class="fa fa-4x fa-car-battery wow bounceIn text-primary"></i>
+                    <h3>Batteries</h3>
+                    <p class="text-muted">Get the right battery for the job! Whether you're cranking an engine, powering a thruster or building a deep cycle house bank, we have the batteries you need.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-bolt wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Electrical</h3>
-                    <p class="text-muted">From troubleshooting and diagnosis to new installation of all electronic equipment and electrical systems.</p>
+                    <h3>Power Management</h3>
+                    <p class="text-muted">As marine electrical systems get more complex, systems monitoring, power management and equipment redundancy become critical to successful cruising. Designing reliable systems is our specialty.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-wrench wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Mechanical</h3>
-                    <p class="text-muted">We will keep your engines, pumps, generators and more running in top condition.</p>
+                    <i class="fa fa-4x fa-solar-panel wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <h3>Solar Energy</h3>
+                    <p class="text-muted">Do you need renewable energy for extended cruising and comfort? We design and install solar energy systems including custom fabrication of arches and support systems.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-compass wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <h3>Navigation Electronics</h3>
+                    <p class="text-muted">As Raymarine authorized distributors and installers, we can take care of all of your autopilot, GPS, radar, AIS and NMEA 2000 network needs.</p>
                 </div>
             </div>
         </div>
