--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,8 @@
       {% include analytics.html %}
     {% endif %}
 
+    <script src="https://kit.fontawesome.com/d1a696fdf4.js" crossorigin="anonymous"></script>
+    
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
