--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Comfortaa";
+  src: "../fonts/Comfortaa-Bold.ttf";
+}
+
 header {
   background-color: #000;
   opacity: 80;
